# synapse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: architecture.md  benchmarks.md  configuration.md  hippocampus.md  user-guide.md
scripts/: consolidate.py
src/synapse/: __init__.py  config.py  encoding.py  falkor.py  provider.py  retrieval.py  tools.py
src/synapse/hippocampus/: __init__.py  cognitive_map.py  consolidation.py  forgetting.py  pattern_completion.py  pattern_separation.py  prediction_error.py  reconsolidation.py  salience.py  schema_extraction.py
tests/: conftest.py  test_cognitive_map.py  test_config.py  test_consolidate.py  test_consolidation.py  test_encoding.py  test_falkor.py  test_falkor_bounded.py  test_forgetting.py  test_hippocampus_coordinator.py  test_pattern_completion.py  test_pattern_completion_wiring.py  test_pattern_separation.py  test_prediction_error.py  test_provider.py  test_provider_hippocampus.py  test_reconsolidation.py  test_remember_tool.py  test_retrieval.py  test_rif.py  test_salience.py  test_schema_extraction.py  test_tools.py
