[project]
name = "synapse-memory"
version = "0.1.0"
description = "Temporal knowledge graph memory for AI agents — Graphiti + FalkorDB with hippocampus-layer memory management"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ardha Studios"}]
keywords = ["memory", "knowledge-graph", "temporal", "ai-agents", "hermes", "falkordb", "graphiti"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "graphiti-core[falkordb]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]